fixes cards invisible issue for container-11

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -204,21 +204,24 @@ hr {
   }
 
   .card-2,
-  .card-7 {
+  .card-7,
+  .card-12 {
     box-shadow: 0 10px 25px 0 rgba(28, 54, 111, 0.2);
     background-color: #fff;
     border-top: 3px solid rgba(28, 54, 111, 0.3); //  background-image: linear-gradient(to top, #1c366f, #1d4681, #1d5792, #1c68a3, #1d79b4);
   }
 
   .card-3,
-  .card-8 {
+  .card-8,
+  .card-13 {
     box-shadow: 0 10px 25px 0 rgba(27, 169, 76, 0.2);
     background-color: #fff;
     border-top: 3px solid rgba(27, 169, 76, 0.3);
   }
 
   .card-4,
-  .card-9 {
+  .card-9,
+  .card-14 {
     box-shadow: 0 10px 25px 0 rgba(196, 61, 125, 0.2);
     background-color: #fff;
     border-top: 3px solid rgba(196, 61, 125, 0.3);
